--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= @title || "LibraryCat | Let's find books!" %></title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <link rel="apple-touch-startup-image" href="<%= asset_path("home-icon.png") %>">
-  <link rel="apple-touch-icon" href="<%= asset_path("home-icon.png") %>">
-  <meta name="apple-mobile-web-app-title" content="LibraryCat">
-  <link rel="icon" href="<%= asset_path("favicon.png") %>" />
-  <!-- <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'> -->
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <%= render 'layouts/header' %>
-  <div class="content container">
-    <%= render 'layouts/messages' %>
-    <%= yield %>
-  </div>
-  <%= render 'layouts/footer' %>
-</body>
+  <head>
+    <title><%= page_title(yield(:title)) %></title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+
+  <body>
+    <div class="container">
+      <% if notice %>
+        <div class="alert alert-info"><%= notice %></div>
+      <% end %>
+      <% if alert %>
+        <div class="alert alert-warning"><%= alert %></div>
+      <% end %>
+      
+      <%= yield %>
+    </div>
+  </body>
 </html>
